--- a/bookshelf_operations/package.json
+++ b/bookshelf_operations/package.json
@@ -1,14 +1,17 @@
 {
-  "name": "bookshelf",
+  "name": "bookshelf-operations",
   "version": "0.0.0",
   "private": true,
   "scripts": {
     "start": "node ./bin/www"
   },
   "dependencies": {
+    "bookshelf": "^1.2.0",
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
     "express": "~4.16.1",
-    "morgan": "~1.9.1"
+    "knex": "^0.95.4",
+    "morgan": "~1.9.1",
+    "pg": "^8.5.1"
   }
 }
